examples/tests/invalid/bring_jsii.main.w
bring "jsii-code-samples";
//    ^^^^^^^^^^^^^^^^^^^ Error: bring "jsii-code-samples" must be assigned to an identifier

bring "foobar" as baz;
//    ^^^^^^^^ Error: Cannot find module "foobar" in source directory
